--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,6 @@
         <version>3.3.1</version>
       </plugin>
     </plugins>
-    <finalName>hiring</finalName>
+    <finalName>hiring-version</finalName>
   </build>
 </project>
